tests/ui/derive/fail_foundry_id_missing_value.rs
use foundry::FoundryId;

#[derive(FoundryId)]
#[foundry(id = foundry::GuardId)]
enum Guard {
    Api,
}

fn main() {}
